[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/MainMenu.gd" id="1"]
[ext_resource type="PackedScene" path="res://ui/menus/CreditsPanel.tscn" id="2"]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
alignment = 1
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
text = "IndustrieLite"
horizontal_alignment = 1

[node name="SaveLoadLabel" type="Label" parent="CenterContainer/VBoxContainer"]
text = "Speicherstand-Name:"
horizontal_alignment = 1

[node name="SaveLoadRow" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
theme_override_constants/separation = 10

[node name="SlotName" type="LineEdit" parent="CenterContainer/VBoxContainer/SaveLoadRow"]
size_flags_horizontal = 3
placeholder_text = "z.B. mein_save"

[node name="SaveNamedButton" type="Button" parent="CenterContainer/VBoxContainer/SaveLoadRow"]
text = "Speichern"

[node name="LoadNamedButton" type="Button" parent="CenterContainer/VBoxContainer/SaveLoadRow"]
text = "Laden"

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
text = ""

[node name="LoadDialog" type="AcceptDialog" parent="."]
title = "Spielstand laden"

[node name="SaveTree" type="Tree" parent="LoadDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -48.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
text = "New Game"

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer"]
text = "Continue"

[node name="CreditsButton" type="Button" parent="CenterContainer/VBoxContainer"]
text = "Credits"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
text = "Quit"

[node name="CreditsPanel" parent="." instance=ExtResource("2")]
visible = false

[connection signal="pressed" from="CenterContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SaveLoadRow/SaveNamedButton" to="." method="_on_save_named_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SaveLoadRow/LoadNamedButton" to="." method="_on_open_load_pressed"]
